added frontend with some js effects

--- a/index.html
+++ b/index.html
@@ -4,8 +4,47 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Star Wars</title>
+    <script src="https://kit.fontawesome.com/2ed1e52188.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style/index.css" >
   </head>
   <body>
     <!-- Write your implementation here -->
+    <header>
+    <nav>
+        <img src="./img/starwarsbg.png" class="nav-logo">
+
+        <i class="fa-solid fa-bars icon" id="effects"></i>
+        <div class="in-effect" id="show-effect">
+            <div class="effect" >
+                <i class="fa-solid fa-user" style="margin: 30px; font-size: 30px;"></i>
+                <i class="fa-solid fa-xmark" style="float: right; margin: 30px; font-size: 30px;"></i>
+            </div>
+            
+            <div style="margin:30px;">
+                <i class="fa-solid fa-share-from-square logo"></i> Log in
+            </div>
+            
+
+            <div class="logos-div">
+                <i class="fa-brands fa-twitter logo"></i>
+                <i class="fa-brands fa-linkedin logo"></i>
+                <i class="fa-brands fa-facebook logo"></i>
+                <i class="fa-solid fa-envelope logo"></i>
+            </div>
+        </div>
+
+        </div>
+    </nav>
+    </header>
+
+    <main>
+    <div class="head"><h1 class="heading"> Starwars Characters you would love!</h1></div>
+
+    <div class="grid-container">
+        <img src="./img/starwarsbg.png" class="profile-pic">
+    </div>
+    </main> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="script/index.js"></script>
   </body>
 </html>
