--- a/index.html
+++ b/index.html
@@ -52,38 +52,38 @@
 
     <div class="grid-container">
       <div>
-        <img src="./img/starwarsbg.png" class="profile-pic">
+        <img src="./img/lukesky.jpeg" class="profile-pic">
         <p>Yino The Rhino</p>
         <button id="yinohero">About Superhero</button>
       </div>
       <div>
-        <img src="./img/starwarsbg.png" class="profile-pic">
+        <img src="./img/c3po.jpeg" class="profile-pic">
       </div>
       <div>
-        <img src="./img/starwarsbg.png" class="profile-pic">
+        <img src="./img/r2d2.webp" class="profile-pic">
       </div>
       <div>
-        <img src="./img/starwarsbg.png" class="profile-pic">
+        <img src="./img/darth.jpeg" class="profile-pic">
       </div>
 
       <div>
-        <img src="./img/starwarsbg.png" class="profile-pic">
+        <img src="./img/leia.jpeg" class="profile-pic">
       </div>
       <div>
-        <img src="./img/starwarsbg.png" class="profile-pic">
+        <img src="./img/lars.png" class="profile-pic">
       </div>
       <div>
-        <img src="./img/starwarsbg.png" class="profile-pic">
+        <img src="./img/beru.webp" class="profile-pic">
       </div>
       <div>
-        <img src="./img/starwarsbg.png" class="profile-pic">
+        <img src="./img/r5.jpeg" class="profile-pic">
       </div>
    
       <div>
-        <img src="./img/starwarsbg.png" class="profile-pic">
+        <img src="./img/biggs.jpeg" class="profile-pic">
       </div>
       <div>
-        <img src="./img/starwarsbg.png" class="profile-pic">
+        <img src="./img/obi.jpeg" class="profile-pic">
       </div>
      
       </div>
@@ -93,7 +93,7 @@
     </main> 
 
 
-    <footer>
+    <!-- <footer>
 
       <div class="logos-div">
         <i class="fa-brands fa-twitter logo-bottom"></i>
@@ -103,7 +103,7 @@
       </div>
 
 
-    </footer>
+    </footer> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="script/index.js"></script>
   </body>
