added for looop for adding person names

--- a/index.html
+++ b/index.html
@@ -51,39 +51,49 @@
     <div class="head"><h1 class="heading"> Starwars Characters you would love!</h1></div>
 
     <div class="grid-container">
-      <div>
+      <div class="">
         <img src="./img/lukesky.jpeg" class="profile-pic">
-        <p>Yino The Rhino</p>
+        <p class="personname"></p>
         <button id="yinohero">About Superhero</button>
       </div>
       <div>
+        
         <img src="./img/c3po.jpeg" class="profile-pic">
+        <p class="personname"></p>
       </div>
       <div>
         <img src="./img/r2d2.webp" class="profile-pic">
+        <p class="personname"></p>
       </div>
       <div>
         <img src="./img/darth.jpeg" class="profile-pic">
+        <p class="personname"></p>
       </div>
 
       <div>
         <img src="./img/leia.jpeg" class="profile-pic">
+        <p class="personname"></p>
       </div>
       <div>
         <img src="./img/lars.png" class="profile-pic">
+        <p class="personname"></p>
       </div>
       <div>
         <img src="./img/beru.webp" class="profile-pic">
+        <p class="personname"></p>
       </div>
       <div>
         <img src="./img/r5.jpeg" class="profile-pic">
+        <p class="personname"></p>
       </div>
    
       <div>
         <img src="./img/biggs.jpeg" class="profile-pic">
+        <p class="personname"></p>
       </div>
       <div>
         <img src="./img/obi.jpeg" class="profile-pic">
+        <p class="personname"></p>
       </div>
      
       </div>
