added height and gender to modal

--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
       
     </script>
   </head>
-  <body>
+  <body id="wholebody">
     <!-- Write your implementation here -->
 
     <div class="modal">
       <div class="alert-content">
         <i class="fa-solid fa-xmark" id="hide-modal" style="float: right; font-size: 35px;"></i>
-       <p>Hello There!</p> 
+       <p class="modal-name" style="margin-top:20px;"></p>
+       <p class="modal-gender">Hello There!</p>
+       <p class="modal-height">Hello There!</p>
       </div>
     </div>
+
     <header>
     <nav>
         <img src="./img/starwarsbg.png" class="nav-logo">
