--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="alert-content">
         <i class="fa-solid fa-xmark" id="hide-modal" style="float: right; font-size: 35px;"></i>
        <p class="modal-name" style="margin-top:20px;"></p>
-       <p class="modal-gender">Hello There!</p>
-       <p class="modal-height">Hello There!</p>
+       <p class="modal-gender"></p>
+       <p class="modal-height"></p>
       </div>
     </div>
 
