--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Star Wars</title>
     <script src="https://kit.fontawesome.com/2ed1e52188.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/index.css" >
     <link rel="icon" type="image/x-icon" href="./img/starwarsicon.png">
-    <script>
-      
-    </script>
   </head>
   <body id="wholebody">
     <!-- Write your implementation here -->
